--- a/package.json
+++ b/package.json
@@ -16,6 +16,8 @@
     "mobx-react": "^6.2.2",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
+    "react-geolocated": "^3.0.1",
+    "react-native-geolocation-service": "^5.0.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.1",
     "rsuite": "^4.8.0",
